<resources>
    <string name="app_name">Only3</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="list">App\nList</string>
    <string name="MainText_1">Smart habit you are using a smart phone,\nOnly3!</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="del">Delete</string>
    <string name="notification_title">Only3 Service Running</string>
    <string name="notification_message">Touch, To Check the Count</string>
    <string name="count_added">Count was increased : %1$d/%2$d</string>
    <string name="count_much_added">Count has been exceeded!!! : %1$d/%2$d</string>
    <string name="abort_1">One day\nthe count has been exceeded</string>
    <string name="count_clean_title">Count has been initialized</string>
    <string name="count_clean_message">A new day began!</string>
    <string name="Enter_count">Please Enter The Count</string>
    <string name="Enter_count_message">Do you want to set the number of times to use the application?</string>
    <string name="blank">You have not entered nothing</string>
    <string name="count_is_zero">Count is Zero, Not applied</string>
    <string name="count_add">Count has been registered</string>
    <string name="now_count">Now: %1$d, All: %2$d</string>
    <string name="count_edit">Count Edit</string>
    <string name="count_fixed">Count has been fixed</string>
    <string name="count_250">Count can be set 3~250</string>
    <string name="count_not_fix_total" >Since the count is exceeded, you can not change the count</string>
    <string name="count_not_fix_ten" >Does not after 10 minutes, you can not change the count</string>
    <string name="count_launcher" >This App is Home Launcher
\nPlease be careful when you set up the count</string>
    <string name="setting">Settings</string>
    <string name="delay">App Check Delay : %1$d Second</string>
    <string name="madeby">Only3, Version : %1$s
\nCopyright <![CDATA[ⓒ]]> 2013 whdghks913
\nAll rights reserved</string>
    <string name="password">Set PassWord</string>
    <string name="enter_password">Enter the your Password, Please</string>
    <string name="enter_password_ok">Password has been registered</string>
    <string name="welcome_1">The Only3 applications can help your smart life!!
\n\nIntuitive UI, fast operation..
\nNow, I will start the world smart!</string>
    <string name="welcome_2">This Icon is AppList!
\nYou can set the count!
\nand We can set up to 250 count</string>
    <string name="welcome_3">This Icon is Setting Button!
\nYou can see the Delay setting, Password etc
\nPlease set a password so that someone can not unlock</string>
    <string name="welcome_4">Do you know how to clear the app?
\n\n
Applications that obtain Administrator permission, you can not delete in the usual way
\nPlease click the main screen, click the [Delete] button to delete
\n\n
Delete the application, Service must be turned off</string>
    <string name="welcome_5">This Icon is Full Lock!
\nYou can do a full lock (your device)
\nIf you can not concentrate , please lock your smart phone</string>
    <string name="next">Next</string>
    <string name="startApp">Only3 Start!</string>
    <string name="device_admin">Only3 Applications to work smoothly must have administrator privileges
\n\nThis application that was developed by a student is pure, korean country
\nQuestions, please mail to whdghks913@naver.com
\n
\nIf you set an administrator, The app is not deleted in the usual way
\nin order to delete, please use the Remove button in the application</string>
    <string name="device_admin_disabled">Administrator privileges are turned off</string>
    <string name="device_admin_disabled_warring">If you disable the permission of this application
\nOnly three applications Can not prevent the delete,
\nFunction does not work
\n\n
Do you want to cancel?</string>
    <string name="ten">Does not after 10 minutes
\nAfter 10 minutes, the end can be</string>
    <string name="five_minute">It was after %1$d minutes from using the application</string>
    <string name="five_minute_setting_TextView">After running the application, the notification every %1$d minutes</string>
    <string name="five_minute_setting_TextView_not">You do not notice when the application is run</string>
    <string name="me_app">This app can not be selected</string>
    <string name="Not_Install">Service is Running, Not uninstall</string>
    <string name="change_log">[Info]
\nApplications that obtain Administrator permission, you can not delete in the usual way
\nPlease click the main screen, click the [Delete] button to delete
\n
\n[3.3.1] : 2014-05-06
\n-Add user guide (Korean only is supported for now)
\n
\n[3.3] : 2014-02-07
\n-(API 11 or down) App List Bug Fix
\n
\n[3.2] : 2014-01-30
\n-Count clear error fix
\n
\n[3.1] : 2014-01-28
\n-Reserve Device lock
\n-etc
\n
\n[3.0] : 2014-01-27
\n-The application of the new icon
\n-Add the lock function of the equipment
\n-Minor patch
\n
\n[2.9.1] : 2014-01-27
\n-Some bug Fix
\n
\n[2.9] : 2014-01-25
\n-Count not clear because Date changed by User
\n
\n[2.8] : 2014-01-25
\n-Count Clear when 12:00 phone not wake up
\n-Fix Count Clear Bug when service stop
\n
\n[2.7] : 2014-01-23
\n-Bug fixes run list of recent
\n
\n[2.6] : 2014-01-22
\n-Full support for landscape mode
\n-hdpi, mdpi screen support
\n-Add Toast notification
\n-Optimization memory
\n
\n[2.5] : 2014-01-21
\n-When you select the launcher app, display a warning
\n
\n[2.4] : 2014-01-21
\n-vibration setting bug fix
\n
\n[2.3] : 2014-01-21
\n-Limit of count change for 10 minutes
\n-Limit of change of the count of Exceeded count app
\n-change the background color of Exceeded count app
\n
\n[2.2] : 2014-01-21
\n-App List UI Change
\n
\n[2.1] : 2013-12-16
\n-Some bug fix
\n-Memory optimization
\n
\n[2.0] : 2013-11-27
\n-Password Error Fix
\n
\n[1.9] : 2013-11-27
\n-When Screen off, bug fix
\n
\n[1.8] : 2013-11-24
\n-Backup and Restore
\n
\n[1.7] : 2013-11-24
\n-Count Clear Error Fix
\n
\n[1.6] : 2013-11-23
\n-Add transparent notification icon function
\n
\n[1.5] : 2013-11-22
\n-Known bug fixes
\n-Sources and memory optimization
\n-Add vibration settings
\n-In hdpi devices such as Nexus S, Fix inconsistent layout
\n-kitkat (version 4.4) support
\n
\n[1.3] : 2013-10-23
\n-10 minutes after boot error fix
\n
\n[1.2] : 2013-10-22
\n-Check Only3 application to prevent the counter
\n
\n[1.1] : 2013-10-22
\n-In order to prevent the deletion, administrator privileges acquisition
\n-Notification every (setting) minutes (add vibration permission)
\n-Fix initialization error counters every day
\n-After 10 minutes, you can stop service
\n-Source optimization
\n
\n[1.0] : 2013-10-21
\n-Applications Release</string>
    <string name="vibrate">Vibrate</string>
    <string name="clear_icon_noti">Transparent notification icon</string>
    <string name="preference_backup_restore">Backup <![CDATA[&]]> Restore</string>
    <string name="preference_backup">Backup</string>
    <string name="preference_restore">Restore</string>
    <string name="preference_backup_complete">Backup Complete!</string>
    <string name="preference_restore_complete">Restore Complete!</string>
    <string name="preference_fail">Task Fail</string>
    <string name="preference_not_file">There are no files</string>
	<string name="loading" >Loading</string>
	<string name="menu_all" >All App</string>
	<string name="menu_download" >Download App</string>
	<string name="alertType_Text" >[Notification Type]</string>
	<string name="alertType_all" >Toast <![CDATA[&]]> Notification</string>
	<string name="alertType_toast" >Toast</string>
	<string name="alertType_notifi" >Notification</string>
	<string name="appSetting_Text" >[App Advanced Setting]</string>
	<string name="alertType_Test" >Notification will be displayed in this way</string>
	<string name="androidservice" >Only3 Service</string>
	<string name="subservice" >SubService</string>
	<string name="all_lock" >Full\nLock</string>
	<string name="all_lock_alert_title" >Phone Full Lock</string>
	<string name="all_lock_alert_message" >Please select the time to lock the phone</string>
	<string name="all_lock_select_check" >Are you sure you want to lock really?
\nYou also will not be any function , including the call / letter when it is locked
\nIf you have important, Please select when you have completed all
\n
\nWhen you press the OK button, you will not be able to use the phone for %1$d:%2$d</string>
	<string name="all_lock_select_check_reserve" >Are you sure you want to lock really?
\nYou also will not be any function , including the call / letter when it is locked
\nIf you have important, Please select when you have completed all
\n
\nWhen you press the OK button,
\nyou will not be able to use the phone for %1$d:%2$d from %3$s %4$s %5$s</string>
	<string name="all_lock_select_error" >You can not select 0 hours 0 minutes</string>
	<string name="all_lock_notifi_message" >Device Full Lock</string>
	<string name="all_lock_show_text0" >Only3 Device Lock</string>
	<string name="all_lock_show_text1" >-- Remaining time --</string>
	<string name="all_lock_show_text2" ></string>
	<string name="all_lock_show_text3" >Please be patient a little more!!</string>
	<string name="all_lock_show_button" >App\nStart</string>
	<string name="all_lock_whitelist_text0" >It is registered in the white list</string>
	<string name="all_lock_whitelist_text1" >Are you sure you want to whitelist this app?</string>
	<string name="all_lock_whitelist_text2" >You can set the count, short touch or, \nto set the white list , please long touch</string>
	<string name="all_lock_alarm_text" >↑ Lock Start Time
\n↓ Device Lock Time</string>
	<string name="all_lock_alarm_btn_1" >Reserve lock</string>
	<string name="all_lock_alarm_btn_2" >Just lock</string>
	<string name="all_lock_alarm_btn_help" >Please select the type of lock</string>
	<string name="all_lock_alarm_finish" >Alarm Registered</string>
	<string name="all_lock_alarm_past" >It can not be set in the past</string>
	<string name="all_lock_alarm_remove" >Cencle reserve lock</string>
	<string name="am" >AM</string>
	<string name="pm" >PM</string>
	<string name="ShowGuide" >Show Guide</string>
	<string name="guide_main_1" >위 화면은 세번만 어플의 메인 화면입니다
\n지금부터, 메인 화면에 대한 설명을 시작하겠습니다
\n\n
\n[시작] 버튼을 눌러서 세번만을 작동시킬수 있으며,\n
\n[어플 목록] 버튼을 눌러 카운트를 측정할 어플을 지정할수도 있습니다\n
\n[전체 잠금] 버튼은 일정 시간동안 스마트폰을 잠궈주는 역할을 합니다\n
\n[설정]에는 세번만 어플의 기본 설정이 담겨 있습니다\n
\n마지막으로 어플을 제거하실때 [제거] 버튼을 이용해서 제거해야만 합니다</string>
	<string name="guide_setting_1" >어플 체크 딜레이란?\n
\n세번만은 현재 실행된 어플을 체크합니다
\n이때 너무 자주 확인을 할 경우 배터리 소모가 빠를 수 있습니다
\n이를 막기위해 여러분께서 세번만에게 적절한 확인 간격을 정해주세요!
\n적절한 체크 시간은 약 2초에서 4초 입니다
\n\n
\n어플 실행후, 알려주기란?\n
\n세번만은 사용자가 지정한 어플을 오래동안 사용하는것을 막기위해
\n사용 시간에 따라 알림으로 알려주는 기능을 가지고 있습니다
\n원하시는 분에 한에서 알려주기 간격을 설정하시면
\n설정한 간격마다 여러분께 알려드립니다
</string>
	<string name="guide_applist_1" >어플 목록에 들어가시면 현재 설치된 어플의 목록을 확인하실수 있습니다
\n시스탬 어플을 확인하려면, 메뉴버튼을 누르신다음 "전체 어플"을 누르시면 됩니다
\n
\n어플 목록을 한번 터치하시면 카운트를 설정할수 있는 알림이 나타납니다
\n
\n아래 "네이버 카페"앱으로 예를 들어 보겠습니다</string>
	<string name="guide_applist_2" >알림의 가운데 있는 입력 상자에 하루에 제한하고싶은 수를 입력해 주시면 됩니다
\n3부터 250까지 범위에서 설정이 가능합니다\n
\n카운트가 초과될경우, 초기화 될때까지 카운트 수정 및 실행이 불가능합니다\n
\n카운트는 매일 밤 정각에 초기화 되며,
\n한번 초기화가 이루어 지고 나서부터 12시 전에 휴대폰이 꺼지고 12시가 지나고 나서 전원을 켰을때 초기화가 이루어 집니다
\n조건 : 한번 이상 초기화가 이루어 져야 합니다
\n\n[참고] 왜 3 이하는 안되나요??\n
\n중요한 어플을 선택했을때 카운트를 변경하시기 편하시라고 제한을 두었습니다
\n\n\n아래는 카운트를 설정하고 나서 모습입니다</string>
	<string name="guide_applist_3" >카운트를 등록한 어플은 이렇게 배경색이 달라지며, 현재 카운터와 전체 카운터를 확인할 수 있습니다</string>
	<string name="guide_applist_4" >카운트를 등록한 어플을 터치하면 현재 카운터 정보와, 수정/삭제 버튼이 나타납니다</string>
	<string name="guide_applist_5" >어플을 길게 터치하면 화이트 리스트에 추가할까요? 라는 알림이 나타납니다
\n화이트 리스트란? 전체 잠금을 한다음 사용해야 하는 어플이 있을경우 화이트 리스트에 등록해 주세요
\n전체 잠금 상태라도 리스트에 등록된 어플은 정상 사용이 가능합니다</string>
</resources>