<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Background"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/start_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/start"
        android:onClick="start_btn"
        android:text="@string/start"
        android:textColor="#ffffffff"
        android:textSize="80sp" />

    <Button
        android:id="@+id/AppList_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/start_Btn"
        android:layout_alignRight="@+id/start_Btn"
        android:background="@drawable/list"
        android:onClick="AppList_Btn"
        android:text="@string/list"
        android:textColor="#ffffffff"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_Btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/MainText_1" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/setting"
        android:layout_alignLeft="@+id/MainText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="15dp"
        android:textColor="#ffffffff"
        android:onClick="delete"
        android:text="@string/del" />

    <Button
        android:id="@+id/setting_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/delete_btn"
        android:layout_alignBottom="@+id/delete_btn"
        android:layout_alignRight="@+id/MainText"
        android:background="@drawable/setting"
        android:onClick="settings"
        android:text="@string/setting"
        android:textColor="#ffffffff" />

</RelativeLayout>
