<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Background"
    tools:context=".Welcome"
    tools:ignore="ContentDescription" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/welcome_1" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main"
        android:layout_below="@+id/main"
        android:layout_marginTop="40dp"
        android:src="@drawable/list" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/welcome_2"
        android:textSize="18sp" />
    
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_alignRight="@+id/imageView1"
        android:layout_below="@+id/textView1"
        android:src="@drawable/setting" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:text="@string/welcome_3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/How_To_Uninstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:text="@string/welcome_4"
        android:textSize="18sp" />
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/How_To_Uninstall"
        android:layout_marginTop="50sp"
        android:background="#00ffffff"
        android:onClick="next"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/next" />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/imageView2"
        android:src="@drawable/all_lock" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ImageView01"
        android:layout_toRightOf="@+id/ImageView01"
        android:text="@string/welcome_5"
        android:textSize="18sp" />

</RelativeLayout>
</ScrollView>
